Fix y-overflow for body

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   background: #1f1f1f;
-  min-height: 100vh;
+  min-height: 100dvh;
+  margin: 0;
   display: flex;
   align-items: center;
   justify-content: center;
